# daily-md

./: .gitignore  Cargo.toml  README.md  index.js  issues.md  manifest.json  package.json
src/: command.rs  date.rs  error.rs  lib.rs  markdown.rs  obsidian.rs
