[package]
name = "daily-md"
version = "0.1.0"
authors = ["Sutton Bradley"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.49"
web-sys = { version = "0.3.60", features = ["console"] }
console_log = { version = "0.2.0", features = ["color"], optional = true }
log = { version = "0.4.17" }
chrono = "0.4.23"
nom = "7.1.3"
thiserror = "1.0.38"

[features]
# TODO don't enable logging by default, figure out wasm-pack build command
default = ["logging"]
logging = ["dep:console_log"]
